--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock, Paper, Scissors</title>
+    <script src="/scripts/gameLogic.js" defer></script>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    
+    <h1 class="title">The ever so Simple Rock, Paper, Scissors Game !!</h1>
+    <div class="content">
+        <h1 class="text" id="gameText"> Game (best of five): <span id="gameNumber">0</span>/5</h1>
+        <h2 class="text" id="scoreText">Points: <span id="score">0</span></h2>
+        <h3 class="text">Pick an Option:</h3>
+        <ul class="actionsButtons">
+            <li><button class="gameAction" data-action="rock">Rock</button></li>
+            <li><button class="gameAction" data-action="paper">Paper</button></li>
+            <li><button class="gameAction" data-action="scissors">Scissors</button></li>
+        </ul>
+        <h3 class="text">The computer chooses: <span id="computerSelection"> </span></h3>
+        <h3 id="result"></h3>
+        <div class="buttonRestart"></div>
+    </div>
+
 </body>
-<script src="/scripts/gameLogic.js"></script>
+
 </html>
