--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
-    <script src="/scripts/gameLogic.js" defer></script>
-    <link rel="stylesheet" href="/style/style.css">
+    <script src="./scripts/gameLogic.js" defer></script>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <h1 class="title">The ever so Simple Rock, Paper, Scissors Game !!</h1>
